<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SpeedTracker</string>
    <string name="comecar">Começar</string>
    <string name="textoWelcome">O SpeedTracker é um sistema de gestão de Calçados feito para facilitar a vida do utilizador monitorando os seus calçados. É possível comprar novos calçados apartir da loja da Aplicação.</string>
    <string name="rackIT">SpeedTracker</string>
    <string name="login">Iniciar Sessão</string>
    <string name="register">Criar conta</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="noAccount">Ainda não tens uma conta?</string>
    <string name="registHere">Cria aqui</string>
    <string name="enter_your_email">Insere aqui o teu email…</string>
    <string name="password_insert">Insere aqui a tua password…</string>
    <string name="remember_me">Mantenha-me conectado</string>
    <string name="welcome">Bem-vindo</string>
    <string name="enter_your_username">Insere aqui o teu username...</string>
    <string name="haveAccount">Ja tens conta?</string>
    <string name="loginHere">Inicia sessão aqui.</string>
    <string name="esquecer_password">Esqueceu-se da password?</string>
    <string name="criar_conta">Criar conta</string>

    <!--    Password-->
    <string name="password_strength_caption">Password Strength: {0}</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="confirmar_password">Confirmar password</string>
    <string name="confirma_a_password">Confirma a password...</string>
    <string name="aceitar_termos">Aceitar <u><font color='#0F6DD2'>termos e condições</font></u></string>
    <string name="nome_de_utilizador">Nome de utilizador</string>
    <string name="weak">Weak</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="introduza_o_nome_do_produto">Introduza o nome do produto...</string>
    <string name="c_digo_de_barras">Código de Barras</string>
    <string name="introduza_o_c_digo_de_barras">Introduza o código de barras...</string>
    <string name="pre_o_de_compra">Preço de compra</string>
    <string name="introduza_o_pre_o_de_compra">Introduza o preço de compra...</string>
    <string name="data_de_validade">Data de validade</string>
    <string name="introduza_a_imagem">Introduza a imagem...</string>
    <string name="adicionar_produto">Adicionar Produto</string>
    <string name="home">Home</string>
    <string name="apagar_produto">Apagar Produto</string>
    <string name="atualizar_dados">Atualizar Dados</string>
    <string name="cancelar">Cancelar</string>
    <string name="introduza_a_quantidade">Introduza a quantidade...</string>
    <string name="quantidade">Quantidade</string>
    <string name="adicionar_produto_lista_de_compras">Adicionar Produto Lista de Compras</string>
    <string name="ver_mais">Ver mais</string>
    <string name="title_activity_testing">TestingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--    Settings-->
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_out">Sign Out</string>
    <string name="Adicionar_marca">Adicionar Marca</string>
    <string name="Adicionar_Modelo">Adicionar Modelo</string>
    <string name="Adicionar_shop">Shop</string>

    <string name="edit_profile_desc">Here you can edit your profile information</string>
    <string name="change_password_desc">Manage your password</string>
    <string name="notifications_desc">Here you can manage your notifications configuration like your activities, interests and recommendations</string>
    <string name="contact_us_desc">Contact us in case you need help by sending an email or using our support line</string>
    <string name="terms_conditions_desc">Terms and Conditions for the usage of the application</string>
    <string name="privacy_policy_desc">Consult information that you share with us</string>
    <string name="sign_out_desc">End your session. Log Out</string>
    <string name="Add_Marca">Adicionar Marca</string>
    <string name="Add_Modelo">Adicionar Modelo</string>
    <string name="Add_Shop">Adicionar novo modelo à lista da Shop</string>

    <string name="content_description">image</string>
    <string name="title_settings">Settings</string>

    <!--    Marcas-->
    <string-array name="Marcas">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <!--    Tamanhos-->
    <string-array name="Tamanho">
        <item>37</item>
        <item>37.5</item>
        <item>38</item>
        <item>38.5</item>
        <item>39</item>
        <item>39.5</item>
        <item>40</item>
        <item>40.5</item>
        <item>41</item>
        <item>41.5</item>
        <item>42</item>
        <item>42.5</item>
        <item>43</item>
        <item>43.5</item>
    </string-array>




</resources>